--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^1.0.7
   video_player: ^2.8.2
   photo_view: ^0.14.0
+  flutter_spinkit:
 
   # Progress & Charts
   fl_chart: ^0.66.2
