--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   video_player: ^2.8.2
   photo_view: ^0.14.0
   flutter_spinkit:
+  animated_bottom_navigation_bar: ^1.3.3
+  flutter_speed_dial: ^7.0.0
 
   # Progress & Charts
   fl_chart: ^0.66.2
@@ -88,9 +90,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/
+   - assets/images/
+   - assets/icons/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
