--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   image_picker: ^1.0.7
   video_player: ^2.8.2
   photo_view: ^0.14.0
-  flutter_spinkit:
+  flutter_spinkit: ^5.2.0
   animated_bottom_navigation_bar: ^1.3.3
   flutter_speed_dial: ^7.0.0
 
@@ -56,7 +56,7 @@ dependencies:
   percent_indicator: ^4.2.3
 
   # Utilities
-  intl: ^0.19.0
+  intl: ^0.20.2
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
@@ -66,7 +66,7 @@ dependencies:
   lottie: ^3.0.0
 
   # File Management
-  file_picker: ^6.1.1
+  file_picker: ^8.0.0
 
 dev_dependencies:
   flutter_test:
