--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
+  share_plus: ^10.0.2
 
   # Icons & Animations
   flutter_svg: ^2.0.9
