--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
 
   # Database
   sqflite: ^2.3.0
+  supabase_flutter: ^2.3.4
   path: ^1.8.3
 
   # UI
@@ -56,11 +57,11 @@ dependencies:
   percent_indicator: ^4.2.3
 
   # Utilities
-  intl: ^0.19.0
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
   share_plus: ^10.0.2
+  google_mobile_ads:
 
   # Icons & Animations
   flutter_svg: ^2.0.9
