--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dependencies:
 
   # File Management
   file_picker: ^8.0.0
+  media_kit: ^1.1.10
+  media_kit_video: ^1.2.5
+  media_kit_libs_video: ^1.0.6
 
 dev_dependencies:
   flutter_test:
