--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   permission_handler: ^11.2.0
   share_plus: ^10.0.2
   google_mobile_ads:
+  url_launcher: ^6.3.0
 
   # Icons & Animations
   flutter_svg: ^2.0.9
